# MoCkErY

./: CMakeLists.txt
include/: main.cpp
